# lidar

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindLibUSB.cmake  RecurseSubdirs.cmake
resources/: resources.qrc
sources/: main.cpp
sources/app/: application.cpp  application.h  application_impl.cpp  application_impl.h
sources/communication/: communication_interface.cpp  communication_interface.h
sources/communication/mcu_emulator_communication/: mcu_emulator_communication.cpp  mcu_emulator_communication.h
sources/communication/usb/: usb.cpp  usb.h
sources/domain/generator/: generator.cpp  generator.h
sources/domain/laser/: laser.cpp  laser.h
sources/domain/mcu_emulator/: mcu_emulator.cpp  mcu_emulator.h
sources/domain/measurements/: measurements.cpp  measurements.h
sources/domain/photodetector/: photodetector.cpp  photodetector.h
sources/domain/services/: base_peripheral_service.cpp  base_peripheral_service.h  service_registry.cpp  service_registry.h
sources/domain/services/adc_service/: adc_service.cpp  adc_service.h
sources/domain/services/da_converter_service/: da_converter_service.cpp  da_converter_service.h
sources/domain/services/dcdc_switch_service/: dcdc_switch_service.cpp  dcdc_switch_service.h
sources/domain/services/digital_potentiometer_service/: digital_potentiometer_service.cpp  digital_potentiometer_service.h
sources/domain/services/freq_generator_service/: freq_generator_service.cpp  freq_generator_service.h
sources/domain/services/temperature_service/: temperature_service.cpp  temperature_service.h
sources/domain/services/transfer_service/: transfer_service.cpp  transfer_service.h
sources/dto/: dto_traits.h
sources/dto/channel/: channel.cpp  channel.h
sources/dto/command/: command.cpp  command.h
sources/dto/da_converter/: da_converter.cpp  da_converter.h
sources/dto/results/: results.cpp  results.h
sources/presentation/presentation_manager/: presentation_manager.cpp  presentation_manager.h
sources/presentation/presenters/about_dialog/: about_dialog.cpp  about_dialog.h
sources/presentation/presenters/chart_window/: chart_view.cpp  chart_view.h  chart_window.cpp  chart_window.h  xyseries_iodevice.cpp  xyseries_iodevice.h
sources/presentation/presenters/main_window/: main_window.cpp  main_window.h
sources/presentation/presenters/settings_window/: settings_window.cpp  settings_window.h
sources/presentation/presenters/status_window/: status_window.cpp  status_window.h
sources/presentation/presenters/switch/: switch.cpp  switch.h
sources/presentation/ui/about_dialog/: about_dialog.ui
sources/presentation/ui/chart_window/: chart_window.ui
sources/settings/: settings.h  settings_provider.cpp  settings_provider.h
sources/utils/data_parser/: data_parser.cpp  data_parser.h
sources/utils/signal_analyser/: signal_analyser.cpp  signal_analyser.h
sources/utils/unit_conversion/: unit_conversion.cpp  unit_conversion.h
(+3 files in other folders)
